--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -333,7 +333,7 @@
     "    !git clone -q https://github.com/FizzleDorf/ComfyUI_FizzNodes\n",
     "    !git clone -q https://github.com/WASasquatch/was-node-suite-comfyui\n",
     "    !git clone -q https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite\n",
-    "    !git clone -q https://github.com/Gourieff/comfyui-reactor-node ~/SDZC/custom_nodes/comfyui-reactor-node\n",
+    "    #!git clone -q https://github.com/Gourieff/comfyui-reactor-node ~/SDZC/custom_nodes/comfyui-reactor-node\n",
     "    !git clone -q https://github.com/mav-rik/facerestore_cf ~/SDZC/custom_nodes/facerestore_cf \n",
     "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
