fix comfyu init

--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -657,7 +657,7 @@
     "            print(\"Invalid choice or missing information.\")\n",
     "            return\n",
     "\n",
-    "        os.system(f\"COMMANDLINE_ARGS='{args}' python main.py 2>/dev/null | grep -o 'URL: https://[^ ]*'\")\n",
+    "        os.system(f\"COMMANDLINE_ARGS='{args}' python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\")\n",
     "\n",
     "    # Mostrar menú de opciones\n",
     "    print(\" \")\n",
