--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -333,9 +333,10 @@
     "    !git clone -q https://github.com/FizzleDorf/ComfyUI_FizzNodes\n",
     "    !git clone -q https://github.com/WASasquatch/was-node-suite-comfyui\n",
     "    !git clone -q https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite\n",
-    "    !git clone https://github.com/failfa-st/failfast-comfyui-extensions\n",
-    "    #!git clone -q https://github.com/Gourieff/comfyui-reactor-node ~/SDZC/custom_nodes/comfyui-reactor-node\n",
-    "    !git clone -q https://github.com/mav-rik/facerestore_cf ~/SDZC/custom_nodes/facerestore_cf \n",
+    "    !git clone -q https://github.com/failfa-st/failfast-comfyui-extensions\n",
+    "    !git clone -q https://github.com/Gourieff/comfyui-reactor-node\n",
+    "    !git clone -q https://github.com/mav-rik/facerestore_cf\n",
+    "    !git clone -q https://github.com/ManglerFTW/ComfyI2I\n",
     "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
     "\n",
@@ -614,7 +615,6 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/SDZ\n",
-    "    clear_output()\n",
     "  \n",
     "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
     "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
@@ -629,76 +629,40 @@
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
-    "    \n",
+    "\n",
     "def opcion4():\n",
     "    %cd /home/studio-lab-user/SDZC\n",
-    "    import subprocess\n",
+    "\n",
+    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
+    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    print(\" \")\n",
+    "    ngrok_token = input(\" Insert ngrok token:\")\n",
+    "    clear_output()\n",
+    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
     "    from threading import Timer\n",
     "    from queue import Queue\n",
     "    from pyngrok import ngrok\n",
-    "    import os\n",
     "\n",
-    "    def ngrok_tunnel(port, queue, auth_token):\n",
+    "    def ngrok_tunnel(port,queue,auth_token):\n",
     "        ngrok.set_auth_token(auth_token)\n",
     "        url = ngrok.connect(port)\n",
     "        queue.put(url)\n",
     "\n",
-    "    def launch_comfy(choice, ngrok_token, sage_url, args):\n",
-    "        if choice == \"1\" and ngrok_token:\n",
-    "            ngrok_output_queue = Queue()\n",
-    "            ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
-    "            ngrok_thread.start()\n",
-    "            ngrok_thread.join()\n",
-    "            ngrok_url = ngrok_output_queue.get().public_url\n",
-    "            print(\"Ngrok URL:\", ngrok_url)\n",
-    "        elif choice == \"2\" and sage_url:\n",
-    "            studio_url = f'{sage_url}/studiolab/default/jupyter/proxy/8188/'\n",
-    "            print(\"SageMaker Studio Lab URL:\", studio_url)\n",
-    "        else:\n",
-    "            print(\"Invalid choice or missing information.\")\n",
-    "            return\n",
+    "    ngrok_output_queue = Queue()\n",
+    "    ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
+    "    ngrok_thread.start()\n",
+    "    ngrok_thread.join()\n",
+    "    #!rm -r /home/studio-lab-user/.ngrok2\n",
+    "    ngrok_url = ngrok_output_queue.get().public_url\n",
+    "    print(\"Ngrok URL:\", ngrok_url)\n",
     "\n",
-    "        os.system(f\"COMMANDLINE_ARGS='{args}' python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\")\n",
-    "\n",
-    "    # Mostrar menú de opciones\n",
-    "    print(\" \")\n",
-    "    print(COLOR_CYAN + \"SDZC MENU:\" + COLOR_RESET)\n",
-    "    print(\"1. Use Ngrok\")\n",
-    "    print(\"2. Use SageMaker\")\n",
-    "    print(\" \")\n",
-    "    choice = input(\" Select an option:\").strip()\n",
-    "\n",
-    "    ngrok_token = \"\"\n",
-    "    sage_url = \"\"\n",
-    "    SDZC_Args = \"--dont-print-server --theme=dark --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
-    "\n",
-    "    if choice == \"1\":\n",
-    "        clear_output()\n",
-    "        print(\" \")\n",
-    "        print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
-    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
-    "        print(\" \")\n",
-    "        ngrok_token = input(\"Insert ngrok token: \").strip()\n",
-    "        clear_output()\n",
-    "        \n",
-    "    elif choice == \"2\":\n",
-    "        clear_output()\n",
-    "        print(\" \")\n",
-    "        print(COLOR_WHITE + \"COPY AND PASTE YOUR URL UP UNTIL EXAMPLE >>> https://abcdefghijkl123.studio.us-east-2.sagemaker.aws\" + COLOR_RESET)\n",
-    "        print(COLOR_CYAN + \"SDZC CANT RUN IF YOU ENTER A INVALID SAGEMAKER URL\" + COLOR_RESET)\n",
-    "        print(\" \")\n",
-    "        sage_url = input(\"Insert sagemaker url: \").strip()\n",
-    "        clear_output()\n",
-    "\n",
-    "    print(COLOR_CYAN + \"SDZC RUNNING\" + COLOR_RESET)\n",
-    "    launch_comfy(choice, ngrok_token, sage_url, SDZC_Args)\n",
-    "\n",
+    "    SDZC_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark --dont-print-server --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "    !COMMANDLINE_ARGS=\"{SDZC_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
-    "    print(COLOR_CYAN + \"SDZC FINISH\" + COLOR_RESET)\n",
-    "\n",
-    "       \n",
+    "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
+    "  \n",
     "def opcion0():\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"GOODBYE!\" + COLOR_RESET)\n",
