--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -337,6 +337,8 @@
     "    !git clone -q https://github.com/Gourieff/comfyui-reactor-node\n",
     "    !git clone -q https://github.com/mav-rik/facerestore_cf\n",
     "    !git clone -q https://github.com/ManglerFTW/ComfyI2I\n",
+    "    !git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Pack\n",
+    "    !git clone -q https://github.com/ltdrdata/ComfyUI-Inspire-Pack\n",
     "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
     "\n",
