--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -481,6 +481,8 @@
     "            %cd ~/SDZ/models/Stable-diffusion\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v5.safetensors -o d5.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/dreamshaper_8LCM.safetensors -o dreamshaper_8LCM.safetensors\n",
+    "            \n",
     "            #!wget --timestamping https://huggingface.co/SimianLuo/LCM_Dreamshaper_v7/resolve/main/LCM_Dreamshaper_v7_4k.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/143906\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
