--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -136,6 +136,7 @@
     "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZ/models/GFPGAN\n",
     "    %cd ~/SDZ/models/GFPGAN\n",
     "    !wget https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/Face_Restore/GFPGANv1.3.pth\n",
     "    !rm -rd ~/SDZC/models/facerestore_models\n",
     "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZC/models/facerestore_models\n",
     "\n",
@@ -144,6 +145,7 @@
     "    !ln -vs /tmp/Codeformer /home/studio-lab-user/SDZ/models/Codeformer\n",
     "    %cd ~/SDZ/models/Codeformer\n",
     "    !wget https://github.com/sczhou/CodeFormer/releases/download/v0.1.0/codeformer.pth\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/Face_Restore/RestoreFormer.pth\n",
     "    !ln -vs /tmp/Codeformer/* /home/studio-lab-user/SDZC/models/facerestore_models\n",
     "\n",
     "    !mkdir -p /tmp/deepbooru\n",
@@ -398,10 +400,10 @@
     "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_foolhardy_Remacri.pth\n",
     "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x-UltraSharp.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NickelbackFS_72000_G.pth\n",
-    "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Siax_200k.pth\n",
+    "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Siax_200k.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKDSuperscale_Artisoft_120000_G.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-Artisoftject_210000_G.pth\n",
-    "    ##!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-SP_178000_G.pth\n",
+    "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-SP_178000_G.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere_300k.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere-Lite_280k.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-YandereNeoXL_200k.pth\n",
@@ -460,6 +462,8 @@
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdv1-5.safetensors\n",
+    "\n",
+    "    !rm /home/studio-lab-user/SDZC/input/example.png\n",
     "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -664,7 +668,8 @@
     "    ngrok_url = ngrok_output_queue.get().public_url\n",
     "    print(\"Ngrok URL:\", ngrok_url)\n",
     "\n",
-    "    SDZC_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark --dont-print-server --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "    #SDZC_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark --dont-print-server --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "    SDZC_Args = f\"--ngrok {ngrok_token} --dont-print-server --xformers --theme=dark\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZC_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
