--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -47,18 +47,19 @@
     "\n",
     "    #!pip install -q --upgrade torchsde\n",
     "    #%pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+    "\n",
     "    !pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade psutil\n",
     "    !pip install -q pytz\n",
     "    !pip install pyngrok\n",
-    "    %pip install tqdm\n",
+    "    !pip install tqdm\n",
+    "    !pip install onnxruntime\n",
     "    #!pip install requests\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
     "    %conda update -q -n base conda\n",
-    "    %conda install -q -c conda-forge gputil\n",
-    "    %conda install -q -y aria2\n",
-    "    %conda install -q -y glib\n",
+    "    %conda install -y -c conda-forge gputil glib libglib pyngrok ffmpeg av gst-libav imageio imageio-ffmpeg aria2\n",
+    "\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip3 install --upgrade requests\n",
     "    !pip install -q torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 torchtext==0.15.2 torchdata==0.6.1 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
@@ -344,7 +345,7 @@
     "    !git clone -q https://github.com/melMass/comfy_mtb\n",
     "    !git clone -q https://github.com/Amorano/Jovimetrix\n",
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Subpack\n",
-    "    !git clone -q https://github.com/THtianhao/ComfyUI-Portrait-Maker\n",
+    "    #!git clone -q https://github.com/THtianhao/ComfyUI-Portrait-Maker\n",
     "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
     "\n",
