--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -345,6 +345,7 @@
     "    !git clone -q https://github.com/melMass/comfy_mtb\n",
     "    !git clone -q https://github.com/Amorano/Jovimetrix\n",
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Subpack\n",
+    "    !git clone -qhttps://github.com/cubiq/ComfyUI_essentials\n",
     "    #!git clone -q https://github.com/THtianhao/ComfyUI-Portrait-Maker\n",
     "    #!git clone https://github.com/Gourieff/comfyui-reactor-node\n",
     "    #!git clone https://github.com/mav-rik/facerestore_cf\n",
