--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -343,6 +343,7 @@
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Pack\n",
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Inspire-Pack\n",
     "    !git clone -q https://github.com/melMass/comfy_mtb\n",
+    "    !git clone -q https://github.com/rgthree/rgthree-comfy\n",
     "    #!git clone -q https://github.com/Amorano/Jovimetrix\n",
     "    #!git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Subpack\n",
     "    !git clone -qhttps://github.com/cubiq/ComfyUI_essentials\n",
