--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -229,6 +229,7 @@
     "    #!git clone https://github.com/graemeniedermayer/stable-diffusion-webui-normalmap-script.git\n",
     "    #!git clone https://github.com/dustysys/ddetailer.git\n",
     "    #!git clone https://github.com/novitalabs/sd-webui-cleaner\n",
+    "    #!git clone https://github.com/sanmeow/a1111-sd-zoe-depth\n",
     "    !git clone https://github.com/Bing-su/adetailer.git\n",
     "    #!https://github.com/A-I-Channel/sdw-wd14-tagger\n",
     "    #!git clone https://github.com/A-I-Channel/AI_Channel_Theme\n",
