--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -334,12 +334,12 @@
     "    !git clone -q https://github.com/Fannovel16/comfyui_controlnet_aux\n",
     "    !git clone -q https://github.com/SLAPaper/ComfyUI-Image-Selector\n",
     "    !git clone -q https://github.com/Derfuu/Derfuu_ComfyUI_ModdedNodes\n",
-    "    !git clone -q https://github.com/FizzleDorf/ComfyUI_FizzNodes\n",
     "    !git clone -q https://github.com/WASasquatch/was-node-suite-comfyui\n",
     "    !git clone -q https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite\n",
     "    !git clone -q https://github.com/failfa-st/failfast-comfyui-extensions\n",
-    "    !git clone -q https://github.com/Gourieff/comfyui-reactor-node\n",
-    "    !git clone -q https://github.com/mav-rik/facerestore_cf\n",
+    "    #!git clone -q https://github.com/FizzleDorf/ComfyUI_FizzNodes\n",
+    "    #!git clone -q https://github.com/Gourieff/comfyui-reactor-node\n",
+    "    #!git clone -q https://github.com/mav-rik/facerestore_cf\n",
     "    !git clone -q https://github.com/ManglerFTW/ComfyI2I\n",
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Impact-Pack\n",
     "    !git clone -q https://github.com/ltdrdata/ComfyUI-Inspire-Pack\n",
